ScoreBoardService.java
fix: summarizeTheScoreBoard method changed sorting by order of addition id to repository ( LocalDateTime.now using unacceptable - matches will have the same time of beginning)

Main.java
add: created objects and test methods with printing in console

p.s: preparation for test class(es)